@startuml DriveHub

title DriveHub - diagrama de clases

abstract class Vehiculo {
    # matricula: string
    # marca: string
    # modelo: string
    # estado: IEstadoVehiculo
    # kilometrajeTotal: number
    # mantenimiento: Mantenimiento
    # tarifa: Tarifa

    + getters_y_setters()

    + setEstado(nuevoEstado: IEstadoVehiculo): void
    + alquilar(cliente: Cliente, fechaInicio: Date, fechaFin: Date): void
    + devolver(): void
    + iniciarMantenimiento(fechaInicio: Date): void
    + finalizarMantenimiento(costo: number, fechaFin: Date)
}

abstract class Tarifa{
    # tarifaBase: number
    # cargoPorKmRecorrido: number
    - estrategiaTemporada: IEstrategiaTarifaTemporada
    + getters_y_setters()
    + abstract calcularCosto(duracion: number, kilometro: Kilometraje): number
}

class TarifaSUV extends Tarifa {
    - cargoPorSeguro: number

    + getters_y_setters
}

interface IEstrategiaTarifaTemporada {
    + ajustarTarifa(tarifaBase: number): number
}

class Cliente {
    - idCliente: number
    - nombre: string
    - apellido: string
    - mail: string
    - telefono: number
    - reserva: Reserva | null
    + getters_y_setters()
    + setReserva(Reserva): void
    + desasociarReserva(): void
}

class Kilometraje{
    -kmsRecorridosPorDia: Map<number,number>

    + getters_y_setters()
    + setKmsRecorridosPorDia()
    + getKmsRecorridosPorDia()
    + calcularKmsTotalesRecorridos(): number
}

class Mantenimiento {
    - kmUltimoMantenimiento: number
    - fechaUltimoMantenimiento: Date
    - fechaInicioMantenimientoActual: Date | null
    - cantidadAlquileres: number
    - historialMantenimientos: RegistroMantenimiento[]

    + getters_y_setters()
    + iniciarRegistroMantenimiento(fechaInicio: Date)
    + finalizarRegistroMantenimiento(costo: number, fechaFin: Date, kmFinal: number)
    + registrarAlquilerCompletado()
    + verificarNecesidadMantenimiento(kmActual: number): boolean
    + puedeFinalizar(fechaActual: Date)
}

class RegistroMantenimiento {
    - kmFinal: number
    - fechaInicio: Date
    - fechaFin: Date
    - costo: number
    - descripcion: string

    + getters()
}

class Reserva{
    - fechaInicio: Date
    - fechaFin: Date
    - kilometraje: Kilometraje
    - vehiculo: Vehiculo
    - cliente: Cliente
    + getters_y_setters()
    + obtenerCostoTotal(): number
}

abstract class ReporteBase {
    # titulo: string
    # gestorFlota: GestorFlota
    + getters_y_setters()
    # abstract ejecutarCalculoReporte(): void
    + generarReporte(): void
}

class ReporteOcupacionFlota extends ReporteBase{
    - fechaInicio: Date
    - fechaFin: Date
}

class ReportePopularidadFlota extends ReporteBase{
    - fechaInicio: Date
    - fechaFin: Date
}

class GestorFlota {
    - static instance: GestorFlota
    - vehiculos: Vehiculo
    + static getInstance(): GestorFlota
    + agregarVehiculo(vehiculo: Vehiculo): void
    + getVehiculos(): Vehiculo[]
}

class GestorTemporadas {
    + obtenerEstrategia(fecha: Date): IEstrategiaTarifaTemporada
}

class DateUtils {
    + static obtenerDiasDuracion(fechaInicio: Date, fechaFin: Date): number
}


interface IEstadoVehiculo {
    + alquilar(vehiculo: Vehiculo, cliente:Cliente, fechaInicio: date, fechaFin:Date): void
    + devolver(vehiculo: Vehiculo): void
    + iniciarMantenimiento(vehiculo: Vehiculo, fechaInicio: Date): void
    + finalizarMantenimiento(vehiculo: Vehiculo, costo: number, fechaFin: Date)
}

abstract class EstadoBase implements IEstadoVehiculo {
    # nombreEstado: string
    + lanzarErrorAccionInvalida(accion: string): void
    + alquilar(vehiculo: Vehiculo, cliente: Cliente, fechaInicio: Date, fechaFin: Date): void
    + devolver(vehiculo: Vehiculo): void
    + iniciarMantenimiento(vehiculo: Vehiculo, fechaInicio: Date): void
    + finalizarMantenimiento(vehiculo: Vehiculo, costo: number, fechaFin: Date): void
}

class EstadoDisponible extends EstadoBase  {
    + alquilar(vehiculo: Vehiculo, cliente: Cliente, fechaInicio: Date, fechaFin: Date): void
    + iniciarMantenimiento(vehiculo: Vehiculo, fechaInicio: Date);
}

class EstadoEnAlquiler extends EstadoBase  {
    - reservaActual: Reserva
    + devolver(vehiculo: Vehiculo): void
    + iniciarMantenimiento(vehiculo: Vehiculo, fechaInicio: Date): void
}

class EstadoEnMantenimiento extends EstadoBase  {
    + finalizarMantenimiento(vehiculo: Vehiculo, costo: number, fechaFin: Date):void
}


' Relaciones

Vehiculo <|-d- Compacto
Vehiculo <|-d- Sedan
Vehiculo <|-d- SUV

Tarifa <|-d- TarifaCompacto
Tarifa <|-d- TarifaSedan
Tarifa o-r-> IEstrategiaTarifaTemporada

Vehiculo *-r- Tarifa
Vehiculo -- GestorFlota
Vehiculo *-l- Mantenimiento
Vehiculo o--> IEstadoVehiculo

Reserva -- Vehiculo
Reserva *-r- Kilometraje
Reserva -l- GestorTemporadas

Cliente "1" -- "1" Reserva
EstadoBase ..> Vehiculo
Mantenimiento "1" *-u- "*" RegistroMantenimiento

IEstrategiaTarifaTemporada <|.. TemporadaBaja
IEstrategiaTarifaTemporada <|.. TemporadaMedia
IEstrategiaTarifaTemporada <|.. TemporadaAlta

GestorFlota *-- ReporteBase

ReporteBase <|-- ReporteRentabilidadFlota

@enduml